--- a/.gitignore
+++ b/.gitignore
@@ -95,7 +95,7 @@ celerybeat-schedule
 # Environments
 .env
 .venv
-env/
+# env/
 venv/
 ENV/
 env.bak/
@@ -126,4 +126,3 @@ dmypy.json
 
 # NLTK
 nltk_data/
-
