--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,11 @@
+certifi==2018.11.29
+chardet==3.0.4
+falcon==1.4.1
+hug==2.4.1
+idna==2.7
 nltk==3.4
+python-mimeparse==1.6.0
+requests==2.20.1
 singledispatch==3.4.0.3
 six==1.11.0
+urllib3==1.24.1
